--- a/package.json
+++ b/package.json
@@ -6,12 +6,24 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "asyncawait": "^1.0.3",
+    "babel-cli": "^6.7.7",
+    "babel-polyfill": "^6.7.4",
+    "babel-preset-es2015": "^6.6.0",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "jade": "~1.11.0",
+    "jquery": "^2.2.3",
+    "js-base64": "^2.1.9",
     "morgan": "~1.6.1",
+    "node-rsa": "^0.3.2",
+    "request": "^2.72.0",
+    "rng-js": "^1.0.1",
     "serve-favicon": "~2.3.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.7.7"
   }
 }
