--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jade": "~1.11.0",
     "jquery": "^2.2.3",
     "js-base64": "^2.1.9",
+    "jssha": "^1.5.0",
     "morgan": "~1.6.1",
     "redis": "^2.6.0-1",
     "request": "^2.72.0",
