--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "babel-cli": "^6.7.7",
     "babel-polyfill": "^6.7.4",
     "babel-preset-es2015": "^6.6.0",
-    "body-parser": "~1.13.2",
+    "body-parser": "^1.15.1",
     "cookie-parser": "~1.3.5",
     "cors": "^2.7.1",
     "debug": "~2.2.0",
@@ -19,6 +19,7 @@
     "jquery": "^2.2.3",
     "js-base64": "^2.1.9",
     "jssha": "^1.5.0",
+    "mongoose": "^4.4.19",
     "morgan": "~1.6.1",
     "redis": "^2.6.0-1",
     "request": "^2.72.0",
