--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "babel-polyfill": "^6.7.4",
     "babel-preset-es2015": "^6.6.0",
     "body-parser": "^1.15.1",
+    "body-parser-xml": "^1.1.0",
     "cookie-parser": "~1.3.5",
     "cors": "^2.7.1",
     "debug": "~2.2.0",
